--- a/roles/ARA/templates/ara.conf.j2
+++ b/roles/ARA/templates/ara.conf.j2
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     # Replace ServerName by your hostname
-    ServerName {{ ansible_fqdn }}
+    ServerName {{ ansible_hostname }}.{{ ara_dns_suffix }}
 
     ErrorLog /var/log/httpd/ara-error.log
     LogLevel warn
